--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peertube-theme-quickstart",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "PeerTube theme quickstart",
   "engine": {
     "peertube": ">=1.3.0"
@@ -23,5 +23,8 @@
       "script": "client/common-client-plugin.js",
       "scopes": [ "common" ]
     }
-  ]
+  ],
+  "translations": {
+    "fr-FR": "./languages/fr.json"
+  }
 }
