--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "peertube-theme-quickstart",
+  "name": "peertube-theme-dark-mode",
   "version": "0.0.2",
-  "description": "PeerTube theme quickstart",
+  "description": "BitTube dark theme",
   "engine": {
     "peertube": ">=1.3.0"
   },
@@ -9,22 +9,13 @@
     "peertube",
     "theme"
   ],
-  "homepage": "https://framagit.org/framasoft/peertube/peertube-theme-quickstart",
-  "author": "Chocobozzz",
-  "bugs": "https://framagit.org/framasoft/peertube/peertube-theme-quickstart/issues",
-  "staticDirs": {
-    "images": "public/images"
-  },
+  "homepage": "https://github.com/ipbc-dev/bittube-dark-theme",
+  "author": "BitTube",
+  "bugs": "https://github.com/ipbc-dev/bittube-dark-theme/issues",
+  "staticDirs": {},
   "css": [
     "assets/style.css"
   ],
-  "clientScripts": [
-    {
-      "script": "client/common-client-plugin.js",
-      "scopes": [ "common" ]
-    }
-  ],
-  "translations": {
-    "fr-FR": "./languages/fr.json"
-  }
+  "clientScripts": [],
+  "translations": {}
 }
