--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peertube-theme-bittube-dark-mode",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "BitTube dark theme",
   "engine": {
     "peertube": ">=1.3.0"
@@ -12,10 +12,17 @@
   "homepage": "https://github.com/ipbc-dev/peertube-theme-bittube-dark-mode",
   "author": "BitTube",
   "bugs": "https://github.com/ipbc-dev/peertube-theme-bittube-dark-mode/issues",
-  "staticDirs": {},
+  "staticDirs": {
+    "images": "public/images"
+  },
   "css": [
     "assets/style.css"
   ],
-  "clientScripts": [],
+  "clientScripts": [
+    {
+      "script": "client/common-client-plugin.js",
+      "scopes": [ "common" ]
+    }
+  ],
   "translations": {}
 }
