--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "peertube-theme-bittube-dark-mode",
-  "version": "1.0.8",
+  "version": "1.0.9",
   "description": "BitTube dark theme",
   "engine": {
     "peertube": ">=1.3.0"
@@ -21,7 +21,9 @@
   "clientScripts": [
     {
       "script": "client/common-client-plugin.js",
-      "scopes": [ "common" ]
+      "scopes": [
+        "common"
+      ]
     }
   ],
   "translations": {}
